--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -35,7 +35,7 @@
 .content {
   flex: 80%;
   padding: 1.75rem;
-  background: url("/main-bg.png") no-repeat 90% 90%;
+  background: url("../../public/main-bg.png") no-repeat 90% 90%;
   &__header {
     display: flex;
     justify-content: space-between;
@@ -257,7 +257,7 @@
       .no-data{
         width: 330px;
         height: 300px;
-        background: url('/no-delivered.png') no-repeat;
+        background: url('../../public/no-delivered.png') no-repeat;
         margin: 0 auto;
         margin-top: 9rem;
         display: flex;
