--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -104,7 +104,7 @@
         gap: 1rem;
       }
       &__logos {
-        svg {
+        img {
           display: inline-block;
           &:last-child {
             margin-left: -9px;
@@ -188,7 +188,7 @@
         align-items: center;
       }
       &__logos {
-        svg {
+        img {
           display: inline-block;
           &:last-child {
             margin-left: -9px;
