--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -265,6 +265,56 @@ section.info {
             cursor: pointer;
           }
         }
+        .connect-block {
+          display: flex;
+          flex-direction: column;
+          gap: 0.375rem;
+          align-items: flex-start;
+          .tip {
+            font-size: 0.625rem;
+            color: var(--primary-clr);
+          }
+          button {
+            font-size: 1rem;
+          }
+        }
+        .message-block {
+          &__message {
+            margin-top: 0.375rem;
+            padding: 0.5rem 1rem;
+            background-color: #eef7fd;
+            width: 60%;
+            line-height: 1.5rem;
+            color: var(--black2-clr);
+            border-radius: 0.25rem;
+            span {
+              color: var(--primary-clr);
+              font-weight: 500;
+            }
+          }
+        }
+        .message-format {
+          .inputs-wrapper {
+            display: flex;
+            gap: 1.2rem;
+            align-items: center;
+            .select {
+              border: 1px solid var(--primary-clr);
+              color: var(--primary-clr);
+              border-radius: 0.25rem;
+              background-color: #eef7fd;
+              padding: 0.5rem 1rem;
+              min-width: 110px;
+            }
+            .link-preview{
+              display: flex;
+              label{
+                color: var(--primary-clr);
+                font-weight: 600;
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -296,7 +346,7 @@ hr {
   width: 80%;
 }
 .submit-wrapper .submit-input::placeholder {
-  color: #5b5e6e;
+  color: var(--black2-clr);
 }
 .submit-wrapper .submit-button {
   background-color: transparent;
