--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -62,6 +62,9 @@ input:focus {
   border: none;
   outline: none;
 }
+input::placeholder{
+  opacity: .5;
+}
 a{
   color: var(--primary-clr);
   text-decoration: none;
