--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -100,6 +100,9 @@ nav {
   background: linear-gradient(113.55deg, #d7c7f4 30.35%, #f8bdad 100%);
   height: 2px;
 }
+.logo img{
+  width: 120px;
+}
 .right {
   display: flex;
   align-items: center;
