--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -222,7 +222,7 @@ nav {
   border-bottom-right-radius: 0;
 }
 
-@media screen and (width<=475px) {
+@media screen and (max-width: 530px) {
   header .right .wallet {
     display: none;
   }
