--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -203,6 +203,11 @@
           }
         }
       }
+      &__title {
+        font-size: 1rem;
+        font-weight: 500;
+        display: none;
+      }
       &__text {
         font-size: 1.125rem;
       }
@@ -226,6 +231,9 @@
           background-color: var(--gray-2-clr);
           color: var(--gray3-clr);
         }
+      }
+      &__btns{
+        display: none;
       }
     }
     .content__body {
@@ -327,24 +335,69 @@
         &__title {
           font-size: 1.125rem;
         }
-        &__body{
-          .progress__value{
+        &__body {
+          .progress__value {
             color: var(--gray3-clr);
           }
         }
       }
     }
-    &__body{
-      .notification-card{
-        padding: 1.25rem .625rem;
-        &__left{
+    &__body {
+      .notification-card {
+        padding: 1.25rem 0.625rem;
+        &__left {
           flex-direction: column;
           flex: 4;
         }
-        &__right{
+        &__right {
           flex: 1;
         }
       }
+    }
+    &__back {
+      display: none;
+    }
+    &.notification {
+      .expanded-card {
+        padding-block: 0.625rem;
+        padding-inline: 0;
+        &__left {
+          flex-direction: column;
+          flex: 4;
+          align-items: flex-start;
+        }
+        &__title {
+          display: block;
+        }
+        &__text {
+          font-size: 0.875rem;
+          color: var(--black2-clr);
+        }
+        &__right {
+          flex-direction: column-reverse;
+          justify-content: flex-end;
+          gap: 0.25rem;
+          flex: 1;
+        }
+        &__status {
+          width: 100%;
+          text-align: center;
+        }
+        &__delivered {
+          font-size: 0.625rem;
+        }
+        &__btns {
+          display: flex;
+          flex: 100%;
+          justify-content: space-between;
+          flex-wrap: wrap;
+          margin-top: .875rem ;
+        }
+      }
+      .content__body{
+        padding-inline: 0;
+      }
+
     }
     .create-btn--mobile {
       display: flex;
@@ -353,22 +406,22 @@
       bottom: 1.125rem;
       left: 50%;
       transform: translateX(-50%);
-      padding: .75rem;
+      padding: 0.75rem;
       text-align: center;
       width: 70%;
     }
   }
 }
-@media screen and (max-width: 475px) {
+@media screen and (max-width: 425px) {
   .content {
     padding-inline: 2.3%;
-    padding-top: .75rem;
-    &__body{
-      .notification-card{
-        &__left{
+    padding-top: 0.75rem;
+    &__body {
+      .notification-card {
+        &__left {
           flex: 3;
         }
-        &__right{
+        &__right {
           flex: 1;
         }
       }
