--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,7 +8,7 @@ nav {
 
 * {
   margin: 0;
-  padding: 0; 
+  padding: 0;
 }
 
 /* Icon 1 */
@@ -22,10 +22,10 @@ nav {
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
   cursor: pointer;
 }
 
@@ -34,7 +34,7 @@ nav {
   position: absolute;
   height: 2px;
   width: 50%;
-  background: #FFF;
+  background: #fff;
   border-radius: 0px;
   opacity: 1;
   left: 10px;
@@ -42,10 +42,10 @@ nav {
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 
 #nav-icon span:nth-child(1) {
@@ -95,12 +95,11 @@ nav {
   left: 12px;
 }
 
-
 .line {
   background: linear-gradient(113.55deg, #d7c7f4 30.35%, #f8bdad 100%);
   height: 2px;
 }
-.logo img{
+.logo img {
   width: 120px;
 }
 .right {
@@ -110,20 +109,64 @@ nav {
 }
 .right .wallet {
   display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 0.5rem 2rem;
+  border-top-left-radius: 1.25rem;
+  border-top-right-radius: 1.25rem;
+  border:1px solid transparent;
+}
+.right .wallet.opened{
+  box-shadow: 0px 16px 17px rgba(189, 189, 189, 0.15);
+  border:1px solid var(--gray-2-clr);
+}
+.right .wallet .wallet__main {
+  display: flex;
   align-items: center;
   gap: 0.5rem;
   cursor: pointer;
+  background: #fff;
 }
 .right .wallet svg {
   color: var(--primary-clr);
 }
-.right .wallet .wallet__id {
+.right .wallet .wallet__main .wallet__id {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   max-width: 10rem;
   font-size: 0.875rem;
   color: #5b5e6e;
+}
+.right .wallet .wallet__list {
+  position: absolute;
+  list-style-type: none;
+  bottom: -5rem;
+  left: -1px;
+  background: #fff;
+  padding-block: 1rem 0.5rem;
+  padding-inline: 2rem;
+  display: flex;
+  gap: .625rem;
+  flex-direction: column;
+  width: 101.5%;
+  border-bottom-left-radius: 1.25rem;
+  border-bottom-right-radius: 1.25rem;
+  box-shadow: 0px 16px 17px rgba(189, 189, 189, 0.15);
+  border:1px solid var(--gray-2-clr);
+  border-top: none;
+}
+.right .wallet .wallet__list li {
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+  font-size: .75rem;
+  cursor: pointer;
+}
+.right .wallet .wallet__list li img {
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
 }
 .dropdown-mobile {
   display: none;
